@@ -14,8 +14,22 @@
 
 	function newcontact()
 	{
-		document.customeradd.action += '&newcontact=1';
-		document.customeradd.submit();
+		var contactscountelem = document.getElementById('contactscount');
+		var nr = contactscountelem.value;
+		var lastcontactelem = document.getElementById('contact' + (nr - 1));
+		var newrow = lastcontactelem.parentNode.insertRow(lastcontactelem.rowIndex + 1);
+		newrow.id = 'contact' + nr;
+		newrow.innerHTML = '<TD width="1%" style="vertical-align: top"><IMG src="img/phone.gif" alt=""></TD>'
+			+ '<TD width="99%" NOWRAP>'
+			+ '<INPUT TYPE="text" size="15" value="" name="customeradd[contacts][' + nr + '][phone]"'
+				+ ' onmouseover="popup(\'{trans("Enter contact phone")}\')" onmouseout="pophide()">'
+			+ '<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_MOBILE}" ID="chkmobile' + nr + '"'
+				+ ' name="customeradd[contacts][' + nr + '][type][]"><label for="chkmobile' + nr + '">{trans("mobile")}</label>'
+			+ '<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_FAX}" ID="chkfax' + nr + '"'
+				+ ' name="customeradd[contacts][' + nr + '][type][]"><label for="chkfax' + nr + '">{trans("fax")}</label>'
+			+ '<BR><INPUT TYPE="text" size="38" value="" name="customeradd[contacts][' + nr + '][name]"'
+				+ ' onmouseover="popup(\'{trans("Enter contact name/description (optional)")}\')" onmouseout="pophide()"></TD>';
+		contactscountelem.value = parseInt(nr) + 1;
 	}
 //-->
 </SCRIPT>
@@ -202,7 +216,7 @@
 					</TD>
 				</TR>
 				{foreach from=$customeradd.contacts item=item key=key}
-    			<TR>
+				<TR ID="contact{$key}">
 					<TD width="1%" style="vertical-align: top">
 						<IMG src="img/phone.gif" alt="">
 					</TD>
@@ -215,9 +229,10 @@
 					</TD>
 				</TR>
 				{/foreach}
-    			<TR>
+				<TR>
 					<TD width="1%"></TD>
 					<TD width="99%" NOWRAP>
+						<INPUT TYPE="HIDDEN" ID="contactscount" VALUE="{$item@total}">
 						<A href="javascript: newcontact()">{trans("Add contact field")} &raquo;&raquo;&raquo;</A>
 					</TD>
 				</TR>
