@@ -13,10 +13,26 @@
 		while (r<1000);
 		document.customeredit.elements['customerdata[pin]'].value = r;
 	}
+
 	function newcontact()
 	{
-		document.customeredit.action += '&newcontact=1';
-		document.customeredit.submit();
+		var contactscountelem = document.getElementById('contactscount');
+		var nr = contactscountelem.value;
+		var lastcontactelem = document.getElementById('contact' + (nr - 1));
+		var newrow = lastcontactelem.parentNode.insertRow(lastcontactelem.rowIndex + 1);
+		newrow.className = 'LIGHT';
+		newrow.id = 'contact' + nr;
+		newrow.innerHTML = '<TD width="1%" style="vertical-align: top"><IMG src="img/phone.gif" alt=""></TD>'
+			+ '<TD width="99%" NOWRAP>'
+			+ '<INPUT TYPE="text" size="15" value="" name="customerdata[contacts][' + nr + '][phone]"'
+				+ ' onmouseover="popup(\'{trans("Enter contact phone")}\')" onmouseout="pophide()">'
+			+ '<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_MOBILE}"'
+				+ ' name="customerdata[contacts][' + nr + '][type][]" ID="chkmobile' + nr + '"><label for="chkmobile' + nr + '">{trans("mobile")}</label>'
+			+ '<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_FAX}"'
+				+ ' name="customerdata[contacts][' + nr + '][type][]" ID="chkfax' + nr + '"><label for="chkfax' + nr + '">{trans("fax")}</label>'
+			+ '<BR><INPUT TYPE="text" size="38" value="" name="customerdata[contacts][' + nr + '][name]"'
+				+ ' onmouseover="popup(\'{trans("Enter contact name/description (optional)")}\')" onmouseout="pophide()"></TD>';
+		contactscountelem.value = parseInt(nr) + 1;
 	}
 //-->
 </SCRIPT>
@@ -193,7 +209,7 @@
 		</script>
 	</TR>
 	{foreach from=$customerinfo.contacts item=item key=key}
-	<TR CLASS="LIGHT">
+	<TR CLASS="LIGHT" ID="contact{$key}">
 		<TD WIDTH="1%" style="vertical-align: top">
 			<IMG SRC="img/phone.gif" ALT="">
 		</TD>
@@ -209,6 +225,7 @@
 	<TR CLASS="LIGHT">
 		<TD WIDTH="1%"></TD>
 		<TD WIDTH="99%">
+			<INPUT TYPE="HIDDEN" ID="contactscount" VALUE="{$item@total}">
 			<A href="javascript: newcontact()">{trans("Add contact field")} &raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
