@@ -41,11 +41,12 @@
 		<TD WIDTH="99%" COLSPAN="2" NOWRAP>
 			<TABLE width="100%" cellpadding="1" cellspacing="0">
 				{foreach from=$nodedata.macs item=item key=key}
-				<TR>
+				<TR ID="mac{$key}">
 					<TD width="100%"><INPUT TYPE="TEXT" NAME="nodedata[macs][{$key}]" VALUE="{$item}" {tip text="Enter MAC address" trigger="mac`$key`"}> <a href="javascript: void(0);" onClick="return macchoosewin(document.nodeadd.elements['nodedata[macs][{$key}]']);" {tip text="Click to select MAC from the list"}>&raquo;&raquo;&raquo;</A></TD>
 				</TR>
 				{/foreach}
 			</TABLE>
+			<INPUT TYPE="HIDDEN" ID="macscount" VALUE="{$item@total}">
 			<A href="javascript: newmac()">{trans("Add MAC address")} &raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
@@ -224,8 +225,16 @@
 
 	function newmac()
 	{
-		document.nodeadd.action += '&newmac=1';
-		document.nodeadd.submit();
+		var macscountelem = document.getElementById('macscount');
+		var nr = macscountelem.value;
+		var lastmacelem = document.getElementById('mac' + (nr - 1));
+		var newrow = lastmacelem.parentNode.insertRow(lastmacelem.rowIndex + 1);
+		newrow.id = 'mac' + nr;
+		newrow.innerHTML = '<TD width="100%"><INPUT TYPE="TEXT" NAME="nodedata[macs][' + nr + ']" VALUE=""'
+			+ ' onmouseover="popup(\'{trans("Enter MAC address")}\')" onmouseout="pophide()">'
+			+ '<a href="javascript: void(0);" onClick="return macchoosewin(document.nodeadd.elements[\'nodedata[macs][' + nr + ']\']);"'
+			+ ' onmouseover="popup(\'{trans("Click to select MAC from the list")}\')" onmouseout="pophide()">&raquo;&raquo;&raquo;</A></TD>';
+		macscountelem.value = parseInt(nr) + 1;
 	}
 
 	function reset_customer()
