@@ -85,6 +85,7 @@ version ? (????-??-??):
   - ping: added selection of ping type thanks to Grzegorz Cichowski [chilan]
   - use more <label> elements instead of javascript's checkElement() [alec]
   - fixed issue with too big session data on mysql [alec]
+  - new contact add and new mac add ported to javascript [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
